fix: aligned navbar items

--- a/components/Navbar/Navbar.module.css
+++ b/components/Navbar/Navbar.module.css
@@ -11,13 +11,14 @@
 }
 
 .wrapper {
+  display: flex;
   width: 100%;
   align-items: center;
   padding: 1.5rem;
+  justify-content: space-between;
 }
 
 .left {
-  float: left;
   display: flex;
   align-items: center;
   gap: 5px;
@@ -48,7 +49,6 @@
 }
 
 .right {
-  float: right;
   display: flex;
   align-items: center;
   gap: 20px;
@@ -77,7 +77,6 @@
   background: var(--background-light);
   display: flex;
   flex-direction: column;
-  align-items: center;
   padding-top: var(--navbar-height);
   position: fixed;
   top: 0;
